--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot Simple</title>
+    <title>Chattwo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f4f4f4;
+            background-color: #00aae4;
         }
         .chat-container {
             width: 350px;
@@ -33,7 +33,7 @@
         }
         .user {
             background: #00aaff;
-            color: white;
+            color: red;
             text-align: right;
         }
         .bot {
