--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Chattwo</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Times New Roman, sans-serif;
             text-align: center;
-            background-color: #00aae4;
-        }
+            background-color: #121212;
+            color: white;
+         } 
         .chat-container {
             width: 350px;
             margin: 20px auto;
-            background: white;
+            background: #1f1f1f;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -32,8 +33,8 @@
             margin: 5px 0;
         }
         .user {
-            background: #00aaff;
-            color: red;
+            background: #00ffcc;
+            color: blue ;
             text-align: right;
         }
         .bot {
@@ -50,10 +51,10 @@
 </head>
 <body>
 
-    <h1>Chatbot Simple</h1>
+    <h1>Chattwo</h1>
     <div class="chat-container">
         <div class="chat-box" id="chat-box">
-            <div class="bot">Hola! ¿En qué puedo ayudarte?</div>
+            <div class="bot">Hola ¿En qué puedo ayudarte?</div>
         </div>
         <input type="text" id="user-input" placeholder="Escribe un mensaje...">
         <button onclick="sendMessage()">Enviar</button>
@@ -78,9 +79,9 @@
 
             let responses = {
                 "hola": "¡Hola! ¿Cómo puedo ayudarte?",
-                "¿cómo estás?": "Soy un chatbot, pero gracias por preguntar 😊",
+                "¿cómo estás?": "Soy un chatbot, pero gracias por preguntar ",
                 "adiós": "¡Hasta luego! Que tengas un buen día.",
-                "gracias": "¡De nada! 😊",
+                "gracias": "¡De nada! ",
                 "default": "Lo siento, no entiendo eso. ¿Puedes intentar otra pregunta?"
             };
 
